# bauble

./: AGENTS.md  LICENSE  README.md  install.sh  uninstall.sh
config/: bauble.conf  bauble.conf.example  bauble.tcss  hooks.json
detectors/: detector.conf  gemini.sh
docs/: architecture.txt  tmux.md
hooks/: pane-cleanup.sh  pane-silence.sh  pane-tint.sh  session-track.sh  waiting-context.sh  wt-tenancy-session-end.sh  wt-tenancy-session-start.sh
launchd/: com.user.wt-tenancy-poller.plist.template  com.user.wt-tenancy-stale.plist.template
scripts/: bauble-detect  bauble-play-sound  test-agent-status.py  test-session-naming.py  test-wt-tenancy.sh  tmux-agent-status  tmux-approve-all  tmux-beads  tmux-beads-render.py  tmux-cheatsheet  tmux-claim-bead  tmux-claude-breadcrumb  tmux-claude-list  tmux-claude-next  tmux-claude-picker  tmux-diff  tmux-diff-extract  tmux-files  tmux-files-viewer  tmux-glow  tmux-glow-viewer  tmux-notes  tmux-paste-screenshot  tmux-quick-capture  tmux-quick-note  tmux-session-rename  tmux-worktree  wt-tenancy  wt-tenancy-poller  wt-tenancy-stale-notify
tmux/: bauble.tmux.conf
tui/: pyproject.toml
tui/src/bauble_tui/: app.py  attach.py  config.py  daemon.py  scrollback.py  state.py  tmux.py
tui/src/bauble_tui/screens/: approve.py  beads.py  capture.py  cheatsheet.py  diff.py  files.py  glow.py  note.py  notes.py  picker.py  rename.py  worktree.py
tui/src/bauble_tui/widgets/: action_list.py  filterable_list.py
tui/tests/: test_action_list.py  test_filterable_list.py
